deploy/k8s/11-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: cacheproxyfy
spec:
  selector:
    app: proxy
  ports:
    - name: proxy
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
