deploy/k8s/13-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: cacheproxyfy
spec:
  selector:
    app: dashboard
  ports:
    - port: 3000
      targetPort: 3000
